# diplo-mod-1

./: .gitignore  README.md  pyproject.toml
notebooks/: 00-intro-dataset.ipynb  01-eda.ipynb  02-preprocessing.ipynb  03-train-baseline-xgboost.ipynb  04-train-nn-pytorch.ipynb  05-evaluation-comparison.ipynb  06-conclusions.ipynb
